test/seq/cmdlists/ttl_mask_err3.err
SyntaxError: Expecting hex literal
Line: 2, Column: 12
ttl_mask = k0x1ffffffff
           ^
